refactor: introduce kpipe-metrics module with OpenTelemetry support and metrics reporters